Alteração para buscar o nome da cidade na intenção de compra