@@ -5,6 +5,7 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.util.StringUtils;
 
 import br.com.compraki.model.IntencaoCompra;
+import br.com.compraki.repository.Cidades;
 import br.com.compraki.repository.IntencaoCompras;
 
 public class IntencaoCompraConverter implements Converter<String, IntencaoCompra> {
@@ -12,10 +13,16 @@ public class IntencaoCompraConverter implements Converter<String, IntencaoCompra
     @Autowired
     private IntencaoCompras intencoes;
 
+    @Autowired
+    private Cidades cidades;
+
     @Override
     public IntencaoCompra convert(String source) {
         if (!StringUtils.isEmpty(source)) {
-            return intencoes.getIntencaoCompraComCoresEAcessorios(Long.valueOf(source));
+            IntencaoCompra intencaoCompra = intencoes.getIntencaoCompraComCoresEAcessorios(Long.valueOf(source));
+            intencaoCompra.setCidade(
+                    this.cidades.findByCodigo(new Long(intencaoCompra.getCidadePreferencia())).get().getNome());
+            return intencaoCompra;
         } else {
             return null;
         }
